media traduccion a español

--- a/MemoAnime/www/css/Medio.css
+++ b/MemoAnime/www/css/Medio.css
@@ -4,7 +4,7 @@
   background-size: cover;
   text-align: center;
   text-shadow: 3px 3px blue;
-  margin-right: 8%;
+  margin: 0% 40%;
   }
   
   body {
