--- a/MemoAnime/platforms/android/app/src/main/assets/www/css/Cartas.css
+++ b/MemoAnime/platforms/android/app/src/main/assets/www/css/Cartas.css
@@ -42,7 +42,17 @@
 	.text{
 		width: 70%;
 		margin-left: 30%;
+		margin-top: 3%;
+		margin-bottom: 3%;
 	}
+	article p{
+		font-size:1.8vw;
+		text-align:justify;
+		text-shadow: 1px 1px 3px rgba(0,0,0,100);
+		color: white;
+		margin-top: 0.5%;
+		margin-bottom: 0.5%;
+		}
 }
 
   /* vertical */
@@ -51,6 +61,7 @@
 		section{
 			width: 90%;
 			margin-left: 5%;
+			margin-top: 2%;
 		}
 	
 		article{
@@ -85,23 +96,21 @@
 		.text{
 			width: 70%;
 			margin-left: 30%;
+			margin-top: 3%;
+			margin-bottom: 3%;
 		}
+		article p{
+			font-size:3vw;
+			text-align:justify;
+			text-shadow: 1px 1px 3px rgba(0,0,0,100);
+			color: white;
+			margin-top: 0.5%;
+			margin-bottom: 0.5%;
+			}
 		
   }
 
-  article p{
-	font-size:78%;
-	text-align:justify;
-	text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
-	color: white;
-
-	margin-top: 0.5%;
-	margin-bottom: 0.5%;
-	}
-   article a p{
-	   color: gold;
-	   font-size: 88%;
-   }
+ 
 
 	
 	
