--- a/MemoAnime/www/css/Galeria.css
+++ b/MemoAnime/www/css/Galeria.css
@@ -2,18 +2,12 @@
     /* background: black; */
     color: white;
     font-size: 2.4em;
-    background-size: cover;
     text-align: center;
     text-shadow: 3px 3px blue;
-    margin-top: 0px;
-    margin-right: 10%;
+    margin: 0% 35%;
     }
     
-    .navbar{
-       
-        background-color: black;
-        text-align: center;
-    }
+  
 /*         HORIZONTAL              */
 @media (orientation: landscape) { 
     section{
